made a whole changes to the images on the slide gallery and the cad for the courses

--- a/offer.html
+++ b/offer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,15 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./main.css">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="./vendor/aos/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./assets/EduBureau high resolution-Logo 11.png" alt="" width="30"
-                    height="24" class="d-inline-block align-text-top ml-4"></a>
+            <a class="navbar-brand ms-5" href="#"><img src="./assets/EduBureau high resolution-Logo 11.png" alt=""
+                    width="30" height="24" class="d-inline-block align-text-top ml-4"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -64,41 +68,184 @@
                             <li><a class="dropdown-item" href="#">Our Team</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Contact
+                        </a>
+                        <ul class="dropdown-menu p-1" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Our Story</a></li>
+                            <li><a class="dropdown-item" href="#">Our Team</a></li>
+                        </ul>
+                    </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><i
+                                class="bi bi-telephone"></i>+234 (0) 098 238 3136</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><i class="bi bi-telephone"></i>+234 (0) 098 238 3136</a>
-                    </li>
-                    <li class="nav-item">
-                        <li><a class="anchor" href="info@edubureau.com"><i class="i bi-envelope"></i>info@edubureau.com</a></li>
-                    </li>
+
 
                 </ul>
                 <form class="">
-                    <button class="btn btn-outline-primary" type="submit">Sign Up</button>
+                    <button class="btn btn-outline-primary me-5" type="submit">Sign Up</button>
                 </form>
             </div>
         </div>
     </nav>
-<!-- <div class="container-fluid">
 
-  <div class="main">
-    <div class="header">
-      <img src="./images/hwd-image-top-boy.jpg" alt="">
-      <p>
-        create
-      </p>
-      <img src="./images/hwd-image-top-boy.jpg" alt="">
+
+    <div class="contaner-fluid bg-offer">
+        <div class="container ofer-top">
+            <h1 class="ms-1 pt-5 of-head ">APP DEVELOPMENT FOR KIDS</h1>
+            <h2 class="ms-1">ONLINE CODING COURSE FOR KIDS : BEGINNERS</h2>
+            <div class="container pt-4">
+
+                <p>
+                    Kids will develop Apps and games for smartphones, start coding immediately, and make their first
+                    steps as digital creators
+                </p>
+
+                <video class="w-50 shadow-lg" src="./video/BBC Learning - What Is Coding.mp4" controls></video>
+            </div>
+
+
+        </div>
     </div>
-  </div>
+    <div class="container-fluid">
+        <div class="sticky">
+            <ul class="sticky-top">
+                <li><a href="">Course Info</a></li>
+                <li><a href="">Reviews</a></li>
+                <li><a href="">Curiculum</a></li>
+                <li><a href="">Team</a></li>
+                <li><a href="">How It Work</a></li>
+                <li><a href="">FAQs</a></li>
+                <li><a href="">Enroll</a></li>
+            </ul>
+        </div>
 
-</div> -->
+    </div>
+
+    <div class="container-fluid mt-5">
+        <h1 class="text-center mb-5">Course Information</h1>
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-md-6 cols-sm-6">
+                <p>
+                    Coding is all about thinking. Learning to code combines scientific knowledge with creativity and
+                    learning a whole new language. It requires high activity of multiple areas in the brain and
+                    altogether empowers children. When children code they learn how to express themselves, develop
+                    procedural thinking, and strengthen their confidence, they acquire a new set of skills that help
+                    them shift from just consuming information to becoming digital creators.
+
+                    In the App development course, students will learn the basics of coding Apps and games for
+                    smartphones. They will write code for the first time, develop and design their own unique self-made
+                    products.
+                </p>
+                <p>
+                    During the course students will learn and implement the following concepts:
+
+                    Programming statements: input, If/else, random and intersect.
+                    Variables: using variables to store data.
+                    Basic design: inserting media files (video, audio and image) into the app.
+                    When do our courses start?
+                    We have a few starting dates so you can choose the class that suits your child’s schedule best. Our
+                    next
+                    class starts on Monday, January 17 at 2:50 PM. If you are interested in one of our classes click on
+                    the
+                    schedule below to start the registration process.
+                </p>
+            </div>
+            <div class="col-lg-5 col-md-5 cols-sm-6 fs-5">
+                <div class="container border shadow-lg course-1">
+                    <div class="row pt-3">
+                        <div class="col-lg-6 col-md-6 col-sm-5 ">
+                            <p>
+                                <i class="bi bi-file-earmark-text"></i>level
+                            </p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-5 fw-bold">
+                            <p>Beginner</p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-5">
+                            <p>
+                                <i class="bi bi-file-earmark-text"></i>Weekly Hours
+                            </p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-5 fw-bold">
+                            <p>
+                                2 hours,
+                                1hr class + 1hr practice<p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-5">
+                            <p>
+                                <i class="bi bi-file-earmark-text"></i>Commitment
+                            </p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-5 fw-bold">
+                            <p>
+                                32 classes, 9 months</p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-5">
+                            <p>
+                                <i class="bi bi-file-earmark-text"></i>Age
+                            </p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-5 fw-bold">
+                            <p> 10 - 17</p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-5">
+                            <p>
+                                <i class="bi bi-file-earmark-text"></i>Language
+                            </p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-5 fw-bold">
+                            <p>
+                                English
+                                * other languages available</p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-5">
+                            <p>
+                                <i class="bi bi-file-earmark-text"></i>Location
+                            </p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-5 fw-bold">
+                            <p>Online classes</p>
+                        </div>
+                        <hr>
+                    </div>
+                    <div>
+                        <p>
+                            Course registration fee - $39 USD
+                            Fully refundable, includes 2 trial lessons
+                        </p>
+                        <p>
+                            Then $82 USD monthly for 9 months
+                            Monthly payments start after trial period
+                        </p>
+                    </div>
+                    <div class="text-center">
+                        <button class="btn btn-outline-danger button-offer font-weight-bold pr-5">
+                            Click Here
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
 
-
-    
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./vendor/aos/aos.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script>
+        if (AOS) {
+            AOS.init()
+        }
+    </script>
 </body>
+
 </html>
