i made changes to the footer

--- a/courses.html
+++ b/courses.html
@@ -16,7 +16,7 @@
     <!-- Nav-bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5" href="#"><img src="./assets/EduBureau high resolution-Logo 11.png" alt=""
+            <a class="navbar-brand ms-5" href="index.html"><img src="./assets/EduBureau high resolution-Logo 11.png" alt=""
                     width="30" height="24" class="d-inline-block align-text-top ml-4"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -31,19 +31,19 @@
                             Our Courses
                         </a>
                         <ul class="dropdown-menu text-danger" aria-labelledby="navbarDropdown ">
-                            <li><a class="dropdown-item" href="#">Scratch (modle 1-3)</a></li>
-                            <li><a class="dropdown-item" href="#">Blockly</a></li>
-                            <li><a class="dropdown-item" href="#">Robotics</a></li>
-                            <li><a class="dropdown-item" href="#">Python</a></li>
+                            <li><a class="dropdown-item" href="#scratch">Scratch (modle 1-3)</a></li>
+                            <li><a class="dropdown-item" href="#Blockly">Blockly</a></li>
+                            <li><a class="dropdown-item" href="#Robotics">Robotics</a></li>
+                            <li><a class="dropdown-item" href="#Python">Python</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Web Development</a></li>
-                            <li><a class="dropdown-item" href="#">Mobile App Development</a></li>
-                            <li><a class="dropdown-item" href="#">Data Science</a></li>
-                            <li><a class="dropdown-item" href="#">Graphic Design</a></li>
-                            <li><a class="dropdown-item" href="#">UI/UX</a></li>
-                            <li><a class="dropdown-item" href="#">Embedded Systems</a></li>
+                            <li><a class="dropdown-item" href="#Web Development">Web Development</a></li>
+                            <li><a class="dropdown-item" href="#Mobile-App-Development">Mobile App Development</a></li>
+                            <li><a class="dropdown-item" href="#Data-Science">Data Science</a></li>
+                            <li><a class="dropdown-item" href="#Graphic-Design">Graphic Design</a></li>
+                            <li><a class="dropdown-item" href="#UI/UX">UI/UX</a></li>
+                            <li><a class="dropdown-item" href="#Embedded-Systems">Embedded Systems</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -116,9 +116,9 @@
     <!-- course for scratch -->
     <div class="container-fluid mt-4">
         <div class="row mt-5 justify-content-center shadow-lg p-5">
-            <div id="scratch" class="col-lg-6 col-md-4 col-sm-6 ">
-                <h1 class="text-danger"><img src="./images/scratch icon.png" alt="" srcset=""> SCRATCH FOR KIDS</h1>
-
+            <div class="col-lg-6 col-md-4 col-sm-6 ">
+                <h1 id="scratch" class="text-danger"><img src="./images/scratch icon.png" alt="" srcset=""> SCRATCH FOR KIDS</h1>
+ 
                 <p class="text-left pt-4">
                     When people, especially kids engage in logical thinking,<br>they grow in creativity and problem
                     solving, which are<br>major life skills required for productivity and success.<br> Scratch is a
@@ -184,7 +184,7 @@
     <div class="container-fluid mt-4">
         <div class="row mt-5 justify-content-center shadow-lg p-5">
             <div id="blockly" class="col-lg-6 col-md-4 col-sm-6 ">
-                <h1 class="text-primary">BLOCKLY</h1>
+                <h1 id="Blockly" class="text-primary">BLOCKLY</h1>
                 <p class="text-left pt-4">
                     Blockly is simply a series of educational games that teaches programming. With Blockly, learning is
                     self-paced and designed for people who have little or no knowledge of programming. By the end of
@@ -250,7 +250,7 @@
         <div class="container-fluid mt-4">
             <div class="row mt-5 mb-5 justify-content-center shadow-lg mb-5 p-5">
                 <div id="robotics" class="col-lg-6 col-md-4 col-sm-6">
-                    <h1 class="text-success">ROBOTICS FOR KIDS</h1>
+                    <h1 id="Robotics" class="text-success">ROBOTICS FOR KIDS</h1>
                     <p class="text-left pt-4">
                         Robots are the new humans! Many are yet to realise that the efforts and services of humans are
                         gradually
@@ -316,7 +316,7 @@
         <div class="container-fluid mt-4">
             <div class="row mt-5 justify-content-center shadow-lg p-5 pb-5">
                 <div class="col-lg-6 col-md-4 col-sm-6">
-                    <h1 class="text-danger">PYTHON</h1>
+                    <h1 id="Python" class="text-danger">PYTHON</h1>
                     <p class="text-left pt-4">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Laboriosam sunt, perferendis rem
                         fugiat
@@ -371,11 +371,11 @@
             </div>
         </div>
 
-        <!-- course for Development -->
+        <!-- course for Web Development -->
         <div class="container-fluid mt-4">
             <div class="row mt-5 justify-content-center shadow-lg mb-5">
                 <div class="col-lg-6 col-md-4 col-sm-6  mb-3">
-                    <h1 class="text-primary">WEB DEVELOPMENT</h1>
+                    <h1 id="Web Development" class="text-primary">WEB DEVELOPMENT</h1>
                     <p class="text-left pt-4">
                         The web is indeed a wide space, and if you are the typical internet user, you probably visit
                         several
@@ -456,7 +456,7 @@
         <div class="container-fluid mt-4">
             <div class="row mt-5 justify-content-center shadow-lg p-5 pb-5">
                 <div class="col-lg-6 col-md-4 col-sm-6">
-                    <h1>ANDROID APP DEVELOPMENT</h1>
+                    <h1 id="Android App">ANDROID APP DEVELOPMENT</h1>
                     <p class="text-left pt-4">
                         There are several games available on the Internet for download on your mobile device and many of
                         such
@@ -569,13 +569,31 @@
                                     </ul>
 
                                 </div>
-                                
-                                <p class="bg-dange rounded p-2 rounded p-1 ">
-                                    Standard
-                                </p>
-                                <p class="bg-dange rounded p-2 rounded p-1 ">
-                                    Weekends
-                                </p>
+                                <div class="">
+                                    <p class="bg-dange rounded p-2 rounded p-1 ">
+                                        Standard
+                                    </p>
+                                    <ul>
+                                        <li>(MON-FRI)
+                                            A.M/P.M
+                                        </li>
+                                        <li>2 MONTHS</li>
+
+                                    </ul>
+                                </div>
+
+                                <div>
+                                    <p class="bg-dange rounded p-2 rounded p-1 ">
+                                        Weekends
+                                    </p>
+                                    <ul>
+                                        <li>(MON-FRI)
+                                            A.M/P.M
+                                        </li>
+                                        <li>2 MONTHS</li>
+
+                                    </ul>
+                                </div>
                             </div>
                             <div class="d-flex justify-content-evenly">
                                 <p>
