--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
                         (0) 098 238 3136</a>
                 </li>
                 </ul>
-                <form class="me-5">
-                    <button class="btn btn-outline-primary " type="submit">Sign Up</button>
-                </form>
+                
+                <div class="me-5">
+                  <a href="./Theform/form.html">  <button class="btn btn-outline-primary " type="submit">Sign Up</button> </a>
+                </div>
             </div>
         </div>
     </nav>
@@ -133,8 +134,8 @@
                         Coding Club, we bridge the gap in technology by imparting our students with coding skills.</p>
 
                     <div class="col mt-5 d-flex justify-content-center d-col">
-                        <button type="button" class="btn btn-danger">Explore Courses</button>
-
+                      <button type="button" class="btn btn-danger"><a href="./courses.html">Explore Courses</a></button> 
+        
                         <a href="#" style="text-decoration: none; color: white;">
 
                             <h3 class="m-3"><img src="./assets/cc094805190c31f1a589bd838695fc5f.png" alt="">How it
@@ -159,7 +160,7 @@
                     <h1>LEARN WITH POPULAR INDUSTRY TOOLS</h1>
                     <p>We teach our courses using the same platforms as professionals. This means your child will learn
                         today and become an expert tomorrow</p>
-                    <div class="row justify-content-evenly">
+                    <div class="row">
                         <div class="col-lg-3 col-md-3 col-sm-4">
                             <a href=""><img
                                     src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
@@ -177,22 +178,21 @@
                                     width="150px" alt=""></a>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-3 col-md-3 col-sm-4">
-                            <div class="d-flex justify-content-center">
-
-
-                                <!-- <a href=""><img
-                                        src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
-                                        width="150px" alt=""></a>
-
-                                <a href=""><img
-                                        src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
-                                        width="150px" alt=""></a>
-
-                                <a href=""><img
-                                        src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
-                                        width="150px" alt=""></a> -->
+                    <div class="row  justify-content-evenly">
+                        <div>
+                            <div class="d-inline-block ">
+                                <div class="col-3">
+                                    <a href=""><img src="./images/kotlin logo.png" width="150px" alt=""></a>
+                                </div>
+                                <div class="col-3">
+                                    <a href=""><img src="./images/blockly logo.png" width="150px" alt=""></a>
+                                </div>
+                                <div class="col-3">
+                                    <a href=""><img src="./images/graphic logo.png" width="150px" alt=""></a>
+                                </div>
+                                <div class="col-3">
+                                    <a href=""><img src="./images/visual studio logo.png" width="150px" alt=""></a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -263,7 +263,8 @@
                 real-time
                 interaction to inspire kids’ creativity.</p>
 
-            <button type="button" class="btn btn-outline-danger explore-btn mt-3">All Ages</button>
+            <button type="button" class="btn btn-outline-danger explore-btn mt-3"><a href="#"
+                    style="text-decoration: none;">All Ages</a></button>
         </div>
     </div>
 
@@ -285,7 +286,7 @@
                                 Scratch course will help ...
                             </p>
                         </div>
-                        <button class="btn btn-outline-danger font-weight-bold"><a href="#sc ratch">Click
+                        <button onclick="myFunction()" class="btn btn-outline-danger font-weight-bold"><a href="#">Click
                                 Here</a></button>
 
                     </div>
@@ -1119,6 +1120,7 @@
                     </div>
                 </div>
             </div>
+        </div>
 
     </footer>
 
@@ -1147,6 +1149,7 @@
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./vendor/aos/aos.js"></script>
+    <script src="./js/script.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script>
         if (AOS) {
