added the review page

--- a/about.html
+++ b/about.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<! lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +14,7 @@
     <!-- Nav-bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5" href="index.html"><img src="./assets/EduBureau high resolution-Logo 11.png" alt=""
+            <a class="navbar-brand ms-5" href="./index.html"><img src="./assets/EduBureau high resolution-Logo 11.png" alt=""
                     width="30" height="24" class="d-inline-block align-text-top ml-4"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -30,19 +29,19 @@
                             Our Courses
                         </a>
                         <ul class="dropdown-menu text-danger" aria-labelledby="navbarDropdown ">
-                            <li><a class="dropdown-item" href="courses.html">Scratch (modle 1-3)</a></li>
-                            <li><a class="dropdown-item" href="courses.html">Blockly</a></li>
-                            <li><a class="dropdown-item" href="courses.html">Robotics</a></li>
-                            <li><a class="dropdown-item" href="courses.html">Python</a></li>
+                            <li><a class="dropdown-item" href="">Scratch (modle 1-3)</a></li>
+                            <li><a class="dropdown-item" href="">Blockly</a></li>
+                            <li><a class="dropdown-item" href="">Robotics</a></li>
+                            <li><a class="dropdown-item" href="">Python</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="courses.html">Web Development</a></li>
-                            <li><a class="dropdown-item" href="courses.html">Mobile App Development</a></li>
-                            <li><a class="dropdown-item" href="courses.html">Data Science</a></li>
-                            <li><a class="dropdown-item" href="courses.html">Graphic Design</a></li>
-                            <li><a class="dropdown-item" href="courses.html">UI/UX</a></li>
-                            <li><a class="dropdown-item" href="courses.html">Embedded Systems</a></li>
+                            <li><a class="dropdown-item" href="">Web Development</a></li>
+                            <li><a class="dropdown-item" href="">Mobile App Development</a></li>
+                            <li><a class="dropdown-item" href="">Data Science</a></li>
+                            <li><a class="dropdown-item" href="">Graphic Design</a></li>
+                            <li><a class="dropdown-item" href="">UI/UX</a></li>
+                            <li><a class="dropdown-item" href="">Embedded Systems</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -57,7 +56,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="about-us.html" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="a" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             About
                         </a>
@@ -89,7 +88,7 @@
                 </ul>
 
                 <div class="me-5">
-                    <a href="./Theform/form.html"> <button class="btn btn-outline-primary " type="submit">Sign
+                    <a href="./Thefo"> <button class="btn btn-outline-primary " type="submit">Sign
                             Up</button> </a>
                 </div>
             </div>
@@ -272,7 +271,7 @@
 
 
     <!-- <footer> -->
-    <footer class="text-white pt-5 pb-4 bg-dark">
+    <footer class="text-white pt-5 pb-4 footer-bg">
         <div class="container-fluid text-center text-md-left">
             <div class="row text-center text-md-left">
                 <div class="col-lg-3 col-xl-3 col-md-4 col-sm-3 mx-auto mt-3">
@@ -481,6 +480,4 @@
             AOS.init()
         }
     </script>
-</body>
-
-</html>
+</b>
