--- a/courses.html
+++ b/courses.html
@@ -58,7 +58,7 @@
                             How It Works
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">How It Works</a></li>
+                            <li><a class="dropdown-item" href="how-it-works.html">How It Works</a></li>
                             <li><a class="dropdown-item" href="#">Why Choose EduBureau Coding Club</a></li>
                             <li><a class="dropdown-item" href="#">Review</a></li>
                         </ul>
@@ -204,7 +204,7 @@
     
     </section>
 
-    <div id="Blockly"></div>
+    <div id="Blockly">
     <section>
         <!-- course for blockly -->
         <div class="container-fluid mt-4">
@@ -902,7 +902,7 @@
         </div>
     </section>
     <!-- <footer> -->
-    <footer class="text-white pt-5 pb-4 bg-dark">
+    <footer class="text-white pt-5 pb-4 footer-bg">
         <div class="container-fluid text-center text-md-left">
             <div class="row text-center text-md-left">
                 <div class="col-lg-3 col-xl-3 col-md-4 col-sm-3 mx-auto mt-3">
