--- a/review.html
+++ b/review.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5" href="#"><img src="./assets/EduBureau high resolution-Logo 11.png" alt=""
+            <a class="navbar-brand ms-5" href="./index.html"><img src="./assets/EduBureau high resolution-Logo 11.png" alt=""
                     width="30" height="24" class="d-inline-block align-text-top ml-4"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -269,6 +269,189 @@
 
         </div>
     </section><!-- End Testimonials Section -->
+    <footer class="text-white pt-5 pb-4 footer-bg">
+        <div class="container-fluid text-center text-md-left">
+            <div class="row text-center text-md-left">
+                <div class="col-lg-3 col-xl-3 col-md-4 col-sm-3 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4 fw-bold text-warning">UK OFFICE</h5>
+                    <address>
+                        3rd Floor, Riverside House, Riverside
+                        Drive AB11 7LH, Aberdeen Uk.
+                        +44(0) 751 221 4139
+                    </address>
+                    <p>
+                        <a href="contactedubureau.com" class="" style="text-decoration: none;">contactedubureau.com</a>
+                    </p>
+                </div>
+
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
+                    <h5 class="text-uppercase mb-4 fw-bold text-warning">LAGOS OFFICE</h5>
+                    <address class="address text-left">
+                        1st Floor, Capwire House, 19 Sinari<br>
+                        Daranijo street, Victoria Island, Lagos,<br>
+                        Nigeria.
+                    </address>
+                    <p>
+                        <a href="#">+234 (0) 908 238 3135</a>
+                    </p>
+                    <p>
+                        <a href="#">+234 (0) 708 807 3315</a>
+                    </p>
+                    <p>
+                        <a href="info@edubureau.com">info@edubureau.com</a>
+                    </p>
+                    <p>
+                        <a href="lagos@edubureau.com">lagos@edubureau.com</a>
+                    </p>
+                </div>
+                <div class="col-md-3 col-lg-3 col-xl-2 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4 fw-bold text-warning">PORTHARCOURT OFFICE</h5>
+
+
+                    <address>
+                        1st and 2nd Floor, The Dome, 17 Peter<br>
+                        Odili Road, Trans-Amadi, Port-<br>
+                        Harcourt, Nigeria.
+                    </address>
+
+                    <p>
+                        <a href="info@edubureau.com">info@edubureau.com</a>
+                    </p>
+                    <p>
+                        <a href="#">+234 (0) 908 238 3135</a>
+                    </p>
+                    <p>
+                        <a href="#">+234 (0) 908 238 3136</a>
+                    </p>
+                    <p>
+                        <a href="portharcourt@edubureau.com">portharcourt@edubureau.com</a>
+                    </p>
+                </div>
+                <div class="col-md-3 col-lg-2 col-xlg-2 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4 fw-bold text-warning">ABUJA OFFICE</h5>
+                    <address>
+                        46 Lobito Crescent, Wuse 2, Abuja, Nigeria.<br>
+                    </address>
+                    <p>
+                        <a href="#">+234 (0) 908 238 3135</a>
+                    </p>
+                    <p>
+                        <a href="info@edubureau.com">info@edubureau.com</a>
+                    </p>
+                    <p>
+                        <a href="abuja@edubureau.com">abuja@edubureau.com</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="container-fluid text-center text-md-left">
+            <div class="row text-center text-md-left">
+                <div class="col-lg-3 col-xl-3 col-md-4 col-sm-3 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4 fw-bold text-warning">How it Works</h5>
+                    <p>
+                        <a href="#">How it Works</a>
+                    </p>
+                    <p>
+                        <a href="#">Why Choose EduBureau</a>
+                    </p>
+                </div>
+
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
+                    <h5 class="text-uppercase text-warning">Courses</h5>
+                    <p>
+                        <a href="#Scratch">Scratch</a>
+                    </p>
+                    <p>
+                        <a href="#Blockly">Blockly</a>
+                    </p>
+
+                    <p>
+                        <a href="#Robotics">Robotics</a>
+                    </p>
+                    <p>
+                        <a href="#Python">Python</a>
+                    </p>
+                    <p>
+                        <a href="#Web Development">Web Development</a>
+                    </p>
+                    <p>
+                        <a href="#App Development">App Development</a>
+                    </p>
+                    <p>
+                        <a href="#Embedded Systems">Embedded Systems</a>
+                    </p>
+                    <p>
+                        <a href="#Cyber Security">Cyber Security</a>
+                    </p>
+                    <p>
+                        <a href="#Data Science">Data Science</a>
+                    </p>
+                </div>
+                <div class="col-md-3 col-lg-3 col-xl-2 mx-auto mt-3">
+                    <h5 class="text-uppercase text-warning fw-bold">About</h5>
+                    <p>
+                        <a href="#">Our teaching Philosopy</a>
+                    </p>
+
+                    <p>
+                        <a href="#">Our Team</a>
+                    </p>
+                    <p>
+                        <a href="#">Our Story</a>
+                    </p>
+                    <p>
+                        <a href="#">Blog</a>
+                    </p>
+                    <p>
+                        <a href="#">Contact us</a>
+                    </p>
+                </div>
+                <div class="col-md-3 col-lg-2 col-xlg-2 mx-auto mt-3">
+                    <h5 class="text-uppercase text-warning fw-bold">Support Center</h5>
+                    <p>
+                        <a href="#">FAQs</a>
+                    </p>
+                    <p>
+                        <a href="#">Help line</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container mt-4">
+            <div class="row align-item-center">
+                <div class="col-md-9 col-lg-8">
+                    <p>
+                        copyright@2022 All rights reserved by:
+                        <a href="#">
+                            <strong>EduBureau</strong>
+                        </a>
+                    </p>
+                </div>
+                <div class="col-md-5 col-lg-4">
+                    <div class="text-center text-md-right">
+                        <ul class="list-unstyled list-inline">
+                            <li class="list-inline-item">
+                                <a href="" class="btn-floating btn-md" style="font-size: 23px;"><i
+                                        class="bi bi-facebook"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="" class="btn-floating btn-md" style="font-size: 23px;"><i
+                                        class="bi bi-instagram"></i></a>
+                            </li>
+                            <li class="list-inline-item ">
+                                <a href="#" class="btn-floating btn-md" style="font-size: 23px;"><i
+                                        class="bi bi-whatsapp"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+
 
     <script src="./js/jquery.min.js"></script>
     <script src="./js/popper.min.js"></script>
